# fastairport

./: README.md  pyproject.toml
src/fastairport/cli/: main.py
tests/: test_cli.py
