[project]
name = "fastairport"
version = "0.1.0"
description = "The fast, Pythonic way to build Arrow Flight servers with Polars and Pydantic."
readme = "README.md"
authors = [
    { name = "Carl Kugblenu", email = "ckugblenu@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pyarrow>=14.0.0",
    "polars>=0.20.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]
keywords = ["arrow", "flight", "data", "analytics", "duckdb", "airport", "polars", "pydantic", "typer", "rich"]

[project.scripts]
fastairport = "fastairport.cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.11",
]
